Fixed long filenames by truncating them

--- a/frontend/onied/src/components/general/fileEntry/fileEntry.module.css
+++ b/frontend/onied/src/components/general/fileEntry/fileEntry.module.css
@@ -1,5 +1,9 @@
 .file {
   text-decoration: solid underline;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  overflow: hidden;
 }
 .file:hover {
   cursor: pointer;
